# Uniplex

./: README.md  SPECIFICATION.md  pyproject.toml
.github/workflows/: publish-npm.yml  publish.yml  test-js.yml  test.yml
docs/: docs.json  examples.mdx  introduction.mdx  llms.txt  quickstart.mdx
docs/concepts/: gates.mdx  passports.mdx  trust-profiles.mdx
docs/docs/concepts/: gates.mdx  trust-profiles.mdx
docs/logo/: uniplex-wordmark-dark.af
docs/specification/: attestation.mdx  gate.mdx  overview.mdx  passport.mdx  profiles.mdx
examples/payments/: README.md  client.js  package.json  server.js
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: agent.ts  attestation.ts  crypto.ts  gate.ts  index.ts  mcp.ts  passport.ts  pop.ts  registry.ts  session.ts
js/tests/: extensions.test.ts  index.test.ts
tests/: test_core.py  test_extensions.py
uniplex/: __init__.py  agent.py  attestation.py  cli.py  crypto.py  gate.py  mcp.py  passport.py  pop.py  registry.py  session.py
