[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uniplex"
version = "2026.01.25"
description = "Python SDK for the Uniplex protocol - AI agent trust infrastructure"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Standard Logic Co.", email = "team@standardlogic.co" }
]
keywords = ["ai", "agents", "trust", "mcp", "authorization", "passport"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
cli = [
    "click>=8.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
]

[project.scripts]
uniplex = "uniplex.cli:main"

[project.urls]
Homepage = "https://uniplex.dev"
Documentation = "https://uniplex.dev/docs"
Repository = "https://github.com/uniplexprotocol/uniplex"

[tool.hatch.build.targets.wheel]
packages = ["uniplex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
